// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gardener-dashboard configmap access restrictions should render the template w/ \`item.options\` 1`] = `
Object {
  "frontend": Object {
    "accessRestriction": Object {
      "items": Array [
        Object {
          "display": Object {
            "description": "display Foo description",
            "title": "display Foo",
            "visibleIf": true,
          },
          "input": Object {
            "description": "input Foo description",
            "inverted": true,
            "title": "input Foo",
          },
          "key": "foo",
          "options": Array [
            Object {
              "display": Object {
                "description": "display Foo  Option 1 description",
                "title": "display Foo Option 1",
                "visibleIf": false,
              },
              "input": Object {
                "description": "input Foo  Option 1 description",
                "title": "input Foo Option 1",
              },
              "key": "foo-option-1",
            },
            Object {
              "display": Object {
                "visibleIf": true,
              },
              "input": Object {
                "description": "input Foo  Option 2 description",
                "inverted": true,
                "title": "input Foo Option 2",
              },
              "key": "foo-option-2",
            },
          ],
        },
      ],
    },
  },
}
`;

exports[`gardener-dashboard configmap access restrictions should render the template w/o \`item.options\` 1`] = `
Object {
  "frontend": Object {
    "accessRestriction": Object {
      "items": Array [
        Object {
          "display": Object {
            "visibleIf": true,
          },
          "input": Object {
            "title": "Foo",
          },
          "key": "foo",
        },
      ],
      "noItemsText": "no items text",
    },
  },
}
`;

exports[`gardener-dashboard configmap alert should render the template w/ \`alert.identifier\` 1`] = `
Object {
  "frontend": Object {
    "alert": Object {
      "identifier": "bar",
      "message": "foo",
      "type": "warning",
    },
  },
}
`;

exports[`gardener-dashboard configmap alert should render the template w/o \`alert.identifier\` 1`] = `
Object {
  "frontend": Object {
    "alert": Object {
      "message": "foo",
      "type": "warning",
    },
  },
}
`;

exports[`gardener-dashboard configmap controlPlaneHighAvailabilityHelp should render the template with controlPlaneHighAvailabilityHelp markdown 1`] = `
Object {
  "frontend": Object {
    "controlPlaneHighAvailabilityHelp": Object {
      "text": "[foo](https://bar.baz)",
    },
  },
}
`;

exports[`gardener-dashboard configmap knownConditions should render the template with knownConditions markdown 1`] = `
Object {
  "frontend": Object {
    "knownConditions": Object {
      "ExampleConditionReady": Object {
        "description": "Example Description",
        "name": "Example",
        "shortName": "E",
        "showAdmin": false,
        "sortOrder": "99",
      },
    },
  },
}
`;

exports[`gardener-dashboard configmap kubeconfig download should render the template w/ \`public.client_secret\` 1`] = `
Object {
  "apiServerCaData": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCllYQnBVMlZ5ZG1WeVEyRT0KLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQ==",
  "oidc": Object {
    "ca": "-----BEGIN CERTIFICATE-----
Li4u
-----END CERTIFICATE-----",
    "issuer": "https://identity.garden.example.org",
    "public": Object {
      "clientId": "kube-kubectl",
      "clientSecret": "kube-kubectl-secret",
    },
    "redirect_uris": Array [
      "https://dashboard.garden.example.org/auth/callback",
      "https://dashboard.ingress.garden.example.org/auth/callback",
    ],
    "rejectUnauthorized": true,
    "scope": "openid email profile groups audience:server:client_id:dashboard audience:server:client_id:kube-kubectl",
  },
}
`;

exports[`gardener-dashboard configmap kubeconfig download should render the template w/o \`public.client_secret\` 1`] = `
Object {
  "apiServerCaData": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCllYQnBVMlZ5ZG1WeVEyRT0KLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQ==",
  "oidc": Object {
    "ca": "-----BEGIN CERTIFICATE-----
Li4u
-----END CERTIFICATE-----",
    "issuer": "https://identity.garden.example.org",
    "public": Object {
      "clientId": "kube-kubectl",
      "usePKCE": true,
    },
    "redirect_uris": Array [
      "https://dashboard.garden.example.org/auth/callback",
      "https://dashboard.ingress.garden.example.org/auth/callback",
    ],
    "rejectUnauthorized": true,
    "scope": "openid email profile groups audience:server:client_id:dashboard audience:server:client_id:kube-kubectl",
  },
}
`;

exports[`gardener-dashboard configmap kubeconfig download should render the template with PKCE flow for the public client 1`] = `
Object {
  "apiServerCaData": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCllYQnBVMlZ5ZG1WeVEyRT0KLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQ==",
  "oidc": Object {
    "ca": "-----BEGIN CERTIFICATE-----
Li4u
-----END CERTIFICATE-----",
    "issuer": "https://identity.garden.example.org",
    "public": Object {
      "clientId": "kube-kubectl",
      "clientSecret": "kube-kubectl-secret",
      "usePKCE": true,
    },
    "redirect_uris": Array [
      "https://dashboard.garden.example.org/auth/callback",
      "https://dashboard.ingress.garden.example.org/auth/callback",
    ],
    "rejectUnauthorized": true,
    "scope": "openid email profile groups audience:server:client_id:dashboard audience:server:client_id:kube-kubectl",
  },
}
`;

exports[`gardener-dashboard configmap oidc should render the template with PKCE flow for the internal client 1`] = `
Object {
  "oidc": Object {
    "ca": "-----BEGIN CERTIFICATE-----
Li4u
-----END CERTIFICATE-----",
    "issuer": "https://identity.garden.example.org",
    "redirect_uris": Array [
      "https://dashboard.garden.example.org/auth/callback",
      "https://dashboard.ingress.garden.example.org/auth/callback",
    ],
    "rejectUnauthorized": true,
    "scope": "openid email profile groups audience:server:client_id:dashboard audience:server:client_id:kube-kubectl",
    "usePKCE": true,
  },
}
`;

exports[`gardener-dashboard configmap oidc should render the template with default scope 1`] = `
Object {
  "oidc": Object {
    "ca": "-----BEGIN CERTIFICATE-----
Li4u
-----END CERTIFICATE-----",
    "issuer": "https://identity.garden.example.org",
    "redirect_uris": Array [
      "https://dashboard.garden.example.org/auth/callback",
      "https://dashboard.ingress.garden.example.org/auth/callback",
    ],
    "rejectUnauthorized": true,
    "scope": "openid email profile groups audience:server:client_id:dashboard audience:server:client_id:kube-kubectl",
  },
}
`;

exports[`gardener-dashboard configmap oidc should render the template with scope containing offline_access 1`] = `
Object {
  "oidc": Object {
    "ca": "-----BEGIN CERTIFICATE-----
Li4u
-----END CERTIFICATE-----",
    "issuer": "https://identity.garden.example.org",
    "redirect_uris": Array [
      "https://dashboard.garden.example.org/auth/callback",
      "https://dashboard.ingress.garden.example.org/auth/callback",
    ],
    "rejectUnauthorized": true,
    "scope": "openid email groups offline_access",
    "sessionLifetime": 2592000,
  },
}
`;

exports[`gardener-dashboard configmap resourceQuotaHelp should render the template with resourceQuotaHelp markdown 1`] = `
Object {
  "frontend": Object {
    "resourceQuotaHelp": Object {
      "text": "[foo](https://bar.baz)",
    },
  },
}
`;

exports[`gardener-dashboard configmap should render the template w/ defaults values 1`] = `
Object {
  "apiVersion": "v1",
  "kind": "ConfigMap",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-configmap",
    "namespace": "garden",
  },
}
`;

exports[`gardener-dashboard configmap should render the template w/ defaults values 2`] = `
"{
   \\"landingPageUrl\\": \\"https://gardener.cloud/\\",
   \\"loginTypes\\": [\\"oidc\\", \\"token\\"]
}
"
`;

exports[`gardener-dashboard configmap should render the template w/ defaults values 3`] = `
Object {
  "apiServerUrl": "https://api.garden.example.org",
  "frontend": Object {
    "defaultHibernationSchedule": Object {
      "development": Array [
        Object {
          "end": "00 08 * * 1,2,3,4,5",
          "start": "00 17 * * 1,2,3,4,5",
        },
      ],
      "evaluation": Array [
        Object {
          "start": "00 17 * * 1,2,3,4,5",
        },
      ],
      "production": null,
    },
    "defaultNodesCIDR": "10.250.0.0/16",
    "externalTools": Array [
      Object {
        "icon": "apps",
        "title": "Applications and Services Hub",
        "url": "https://apps.garden.example.org/foo/bar{?namespace,name}",
      },
    ],
    "features": Object {
      "projectTerminalShortcutsEnabled": false,
      "terminalEnabled": false,
    },
    "helpMenuItems": Array [
      Object {
        "icon": "description",
        "title": "Getting Started",
        "url": "https://gardener.cloud/about/",
      },
      Object {
        "icon": "mdi-slack",
        "title": "slack",
        "url": "https://kubernetes.slack.com/messages/gardener",
      },
      Object {
        "icon": "mdi-bug",
        "title": "Issues",
        "url": "https://github.com/gardener/dashboard/issues/",
      },
    ],
    "seedCandidateDeterminationStrategy": "SameRegion",
    "serviceAccountDefaultTokenExpiration": 7776000,
  },
  "logFormat": "text",
  "logLevel": "debug",
  "oidc": Object {
    "ca": "-----BEGIN CERTIFICATE-----
Li4u
-----END CERTIFICATE-----",
    "issuer": "https://identity.garden.example.org",
    "redirect_uris": Array [
      "https://dashboard.garden.example.org/auth/callback",
      "https://dashboard.ingress.garden.example.org/auth/callback",
    ],
    "rejectUnauthorized": true,
    "scope": "openid email profile groups audience:server:client_id:dashboard audience:server:client_id:kube-kubectl",
  },
  "port": 8080,
  "readinessProbe": Object {
    "periodSeconds": 10,
  },
  "terminal": Object {
    "container": Object {
      "image": "ops-toolbelt:0.11.0-mod1",
    },
    "garden": Object {
      "operatorCredentials": Object {
        "serviceAccountRef": Object {
          "name": "dashboard-terminal-admin",
          "namespace": "garden",
        },
      },
    },
    "gardenTerminalHost": Object {
      "seedRef": "soil-gcp",
    },
  },
}
`;

exports[`gardener-dashboard configmap terminal config should render the template 1`] = `
Object {
  "terminal": Object {
    "container": Object {
      "image": "chart-test:0.1.0",
    },
    "garden": Object {
      "operatorCredentials": Object {
        "serviceAccountRef": Object {
          "name": "robot",
          "namespace": "garden",
        },
      },
    },
    "gardenTerminalHost": Object {
      "seedRef": "my-seed",
    },
    "serviceAccountTokenExpiration": 42,
  },
}
`;

exports[`gardener-dashboard configmap terminal shortcuts should render the template 1`] = `
Object {
  "frontend": Object {
    "terminal": Object {
      "shortcuts": Array [
        Object {
          "container": Object {
            "args": Array [
              "a",
              "b",
              "c",
            ],
            "command": Array [
              "command",
            ],
            "image": "repo:tag",
          },
          "description": "description",
          "target": "foo-target",
          "title": "title",
        },
      ],
    },
  },
}
`;

exports[`gardener-dashboard configmap themes should render the template 1`] = `
Object {
  "frontend": Object {
    "themes": Object {
      "dark": Object {
        "main-navigation-title": "grey.darken3",
        "primary": "#ff0000",
      },
      "light": Object {
        "main-navigation-title": "grey.darken3",
        "primary": "#ff0000",
      },
    },
  },
}
`;

exports[`gardener-dashboard configmap themes should render the template with light theme values only 1`] = `
Object {
  "frontend": Object {
    "themes": Object {
      "light": Object {
        "main-navigation-title": "grey.darken3",
        "primary": "#ff0000",
      },
    },
  },
}
`;

exports[`gardener-dashboard configmap themes should render the template with sla description markdown hyperlink 1`] = `
Object {
  "frontend": Object {
    "sla": Object {
      "description": "[foo](https://bar.baz)",
      "title": "SLA title",
    },
  },
}
`;

exports[`gardener-dashboard configmap tickets should render the template 1`] = `
Object {
  "frontend": Object {
    "ticket": Object {
      "avatarSource": "gravatar",
      "gitHubRepoUrl": "https://github.com/gardener/tickets",
      "hideClustersWithLabels": Array [
        "ignore1",
        "ignore2",
      ],
      "issueDescriptionTemplate": "issue description",
      "newTicketLabels": Array [
        "default-label",
      ],
    },
  },
  "gitHub": Object {
    "apiUrl": "https://github.com/api/v3/",
    "org": "gardener",
    "pollIntervalSeconds": 60,
    "repository": "tickets",
    "syncConcurrency": 5,
    "syncThrottleSeconds": 10,
  },
}
`;

exports[`gardener-dashboard configmap tickets should render the template 2`] = `
Object {
  "apiVersion": "v1",
  "data": Object {
    "authentication.token": "d2ViaG9va0F1dGhlbnRpY2F0aW9uVG9rZW4=",
    "webhookSecret": "d2ViaG9va1NlY3JldA==",
  },
  "kind": "Secret",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-github",
    "namespace": "garden",
  },
  "type": "Opaque",
}
`;

exports[`gardener-dashboard configmap token request should render the template 1`] = `
Object {
  "frontend": Object {
    "serviceAccountDefaultTokenExpiration": 42,
  },
  "tokenRequestAudiences": Array [
    "foo",
    "bar",
  ],
}
`;

exports[`gardener-dashboard configmap unreachable seeds should render the template 1`] = `
Object {
  "unreachableSeeds": Object {
    "matchLabels": Object {
      "seed": "unreachable",
    },
  },
}
`;

exports[`gardener-dashboard configmap vendorHints should render the template 1`] = `
Object {
  "frontend": Object {
    "vendorHints": Array [
      Object {
        "matchNames": Array [
          "foo",
          "bar",
        ],
        "message": "[foo](https://bar.baz)",
        "severity": "warning",
      },
      Object {
        "matchNames": Array [
          "fooz",
        ],
        "message": "other message",
      },
    ],
  },
}
`;
